node/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8-node-deployment
  labels:
    app: k8-node-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8-node-deployment
  template:
    metadata:
      labels:
        app: k8-node-deployment
    spec:
      containers:
        - name: k8-node-deployment
          image: manishsaraan/k8-node:1.3
          ports:
            - containerPort: 3000
