node/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-node-service
spec:
  selector:
    app: k8-node-deployment
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30000
